controllers/jenkins-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jenkins.test
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-service
              servicePort: 8080
